--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -56,9 +56,7 @@
 
         /* --- Service Worker --- */
         if ('serviceWorker' in navigator) {
-            navigator.serviceWorker
-                    .register('./service-worker.js')
-                    .then(function() { console.log('Service Worker Registered'); });
+            navigator.serviceWorker.register("./service-worker.js");
         }
     }
 </script>
