--- a/_includes/styles.scss
+++ b/_includes/styles.scss
@@ -243,9 +243,9 @@ main.container {
 }
 
 .dp__post:not(:first-child) {
-  margin-top: 30px;
-  padding-top: 30px;
-  border-top: 1px solid #ddd;
+  margin-top: 25px;
+  padding-top: 25px;
+  border-top: 1px solid #f1f1f1;
 }
 .dp__post-date {
   color: #555;
@@ -269,11 +269,13 @@ main.container {
 
   &:hover {
     color: darken(#9d6742, 16%);
+    text-decoration: underline;
   }
 }
 
 .dp__post-tag {
-  color: #555;
+  color: #50545c;
+  font-weight: 600;
 }
 
 .dp__about_links {
