--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,4 +2,10 @@
 layout: default
 ---
 
+{{ page.date | date: "%B %e, %Y" }} - {% include read_time.html %}
+
+<h1>
+  {{ page.title }}
+</h1>
+
 {{ content }}
