--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -77,3 +77,29 @@ h1 {
   position: relative;
   top: 20px;
 }
+
+blockquote {
+  background: #f9f9f9;
+  border-left: 10px solid #ccc;
+  margin: 1.5em 10px;
+  padding: 0.5em 10px;
+  quotes: "\201C""\201D""\2018""\2019";
+}
+
+blockquote:before {
+  color: #ccc;
+  content: open-quote;
+  font-size: 4em;
+  line-height: 0.1em;
+  margin-right: 0.25em;
+  vertical-align: -0.4em;
+}
+
+blockquote p {
+  @apply inline;
+}
+
+ul {
+  @apply list-disc;
+  @apply list-inside;
+}
