--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -121,7 +121,14 @@ ol li::marker {
 }
 
 .gitment-root-container {
-  border-top: 1px solid #DDD;
+  border-top: 1px solid #ddd;
+}
+
+.gatsby-resp-image-figcaption {
+  color: #666;
+  font-size: 70%;
+  margin: 0px auto 30px auto;
+  text-align: center;
 }
 
 /* ---- Utilities ---- */
