--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -37,7 +37,7 @@ html[data-theme="dark"] {
 
   --input-bg: #222a3a;
 
-  --font-color-opacity: 0.9;
+  --font-color-opacity: 1;
   --font-color: rgba(255, 255, 255, var(--font-color-opacity));
 }
 
@@ -69,7 +69,9 @@ html {
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
 
-  font-size: 12px;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 1.65;
   color: var(--font-color);
 }
 
@@ -86,6 +88,53 @@ body {
 
 body {
   background-color: var(--bg-color);
+}
+
+p {
+  margin-bottom: 1.15rem;
+  --font-color-opacity: 0.8;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5 {
+  margin: 2.75rem 0 1.05rem;
+  font-weight: 400;
+  line-height: 1.15;
+  @apply tracking-tight;
+}
+
+h1 {
+  margin-top: 0;
+  font-size: 7.594rem;
+}
+
+h2 {
+  font-size: 5.063rem;
+}
+
+h3 {
+  font-size: 3.375rem;
+}
+
+h4 {
+  font-size: 2.25rem;
+}
+
+h5 {
+  font-size: 1.5rem;
+}
+
+small,
+.text_small {
+  font-size: 0.667rem;
+}
+
+small,
+.text_small {
+  font-size: 0.667em;
 }
 
 .main-content {
@@ -109,26 +158,6 @@ pre {
 pre[class*="language-"] {
   background: var(--code-bg);
   @apply mb-10 mt-10;
-}
-
-h4 {
-  --font-color-opacity: 1;
-  @apply font-semibold mt-12 mb-6 text-3xl;
-}
-
-h3 {
-  --font-color-opacity: 1;
-  @apply font-semibold mt-12 mb-6 text-4xl;
-}
-
-h2 {
-  --font-color-opacity: 1;
-  @apply font-semibold mt-12 mb-6 text-4xl;
-}
-
-h1 {
-  --font-color-opacity: 1;
-  @apply font-semibold mt-12 mb-6 text-5xl;
 }
 
 .header-link {
