--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -238,6 +238,14 @@ ol li::marker {
   margin: 20px auto;
 }
 
+.logo > * {
+  translate: all 0.2s;
+}
+
+.logo:hover > * {
+  opacity: 0.8;
+}
+
 @media all and (max-width: 700px) {
   .logo__text {
     display: none;
