--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -1,5 +1,5 @@
 ---
-import '../styles/main.css';
+import "../styles/main.css";
 
 export interface Props {
   title: string;
@@ -14,7 +14,7 @@ const { title, description } = Astro.props;
 <meta charset="utf-8" />
 <meta http-equiv="x-ua-compatible" content="ie=edge" />
 <meta name="viewport" content="width=device-width" />
-<link rel="icon" type="image/x-icon" href="/favicon.svg" />
+<link rel="icon" href="/favicon.svg" />
 <meta name="generator" content={Astro.generator} />
 
 <!-- Primary Meta Tags -->
