--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -52,17 +52,17 @@ const posts = unsortedPosts.sort(
               alt="Image of Dylan playing drums"
               class="rounded-md m-auto"
               loading="lazy"
-              width={200}
+              format="png"
+              aspectRatio="5:3" 
               height={200}
-              format="webp"
             />
           </picture>
         </a>
       </div>
 
-      <a href="/sitemap">
+      <!-- <a href="/sitemap">
         <SubHeading style={{ marginTop: 0 }}>Popular Tags</SubHeading>
-      </a>
+      </a> -->
       <!-- 
         <TagsList tags={sortedTags.map((p)=> p.tag)} /> -->
     </aside>
