--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -7,9 +7,7 @@ export interface Props {
   content: Post;
 }
 
-const {
-  content,
-} = Astro.props as Props;
+const { content } = Astro.props as Props;
 ---
 
 <BaseLayout title={content.title} description={content.description}>
@@ -18,27 +16,39 @@ const {
   </div>
 
   <section class="mt-4" id="main-content" tab-index="-1">
-    <h1 class={`${content.series ? "mb-0" : "mb-10" } mt-4 mx-auto font-bold text-center`} style={{ maxWidth: "45ch" }}>
+    <h1 class={`${content.series ? "mb-0" : "mb-10"} mt-4 mx-auto font-bold text-center`} style={{ maxWidth: "45ch" }}>
       {content.title}
     </h1>
 
-    {content.series && (
-    <h6 class="mb-10 mt-0 mx-auto italic text-center" style={{ maxWidth: "45ch" }}>
-      Part of the {content.series} series.
-    </h6>
-    )}
+    {
+      content.series && (
+        <h6 class="mb-10 mt-0 mx-auto italic text-center" style={{ maxWidth: "45ch" }}>
+          Part of the {content.series} series.
+        </h6>
+      )
+    }
 
     <article class="blog__post mb-10 dark:text-gray-100 leading-relaxed">
       <slot />
     </article>
 
-    <div class="blog__post" style={{ marginTop: "2rem" }}>
-      <script src="https://giscus.app/client.js" data-repo="ganderzz/dylanpaulus.com"
-        data-repo-id="MDEwOlJlcG9zaXRvcnk3NjUzNTg5OQ==" data-category="Announcements"
-        data-category-id="DIC_kwDOBI_YW84B-i8I" data-mapping="pathname" data-strict="0" data-reactions-enabled="1"
-        data-emit-metadata="0" data-input-position="bottom" data-theme="preferred_color_scheme" data-lang="en"
-        crossorigin="anonymous" async>
-        </script>
+    <div class="blog__post my-4">
+      <script
+        src="https://giscus.app/client.js"
+        data-repo="ganderzz/dylanpaulus.com"
+        data-repo-id="MDEwOlJlcG9zaXRvcnk3NjUzNTg5OQ=="
+        data-category="Announcements"
+        data-category-id="DIC_kwDOBI_YW84B-i8I"
+        data-mapping="pathname"
+        data-strict="0"
+        data-reactions-enabled="1"
+        data-emit-metadata="0"
+        data-input-position="bottom"
+        data-theme="preferred_color_scheme"
+        data-lang="en"
+        crossorigin="anonymous"
+        async
+      ></script>
     </div>
   </section>
 </BaseLayout>
