--- a/src/pages/about/index.astro
+++ b/src/pages/about/index.astro
@@ -1,5 +1,5 @@
 ---
-import { Image } from "@astrojs/image/components";
+import { Image, Picture } from "@astrojs/image/components";
 import SubHeading from "../../components/SubHeading.astro";
 import BaseLayout from "../../layouts/BaseLayout.astro";
 ---
@@ -13,14 +13,13 @@ import BaseLayout from "../../layouts/BaseLayout.astro";
     <div class="flex flex-col gap-4 leading-loose">
       <div class="flex flex-col md:flex-row w-full">
         <div class="text-center w-full md:w-1/2">
-          <Image
-            src="/images/about-image.jpg"
+          <Picture 
+            src="/images/about-image.jpg" 
+            widths={[200, 400, 800]} 
+            aspectRatio="4:3" 
+            sizes="(max-width: 800px) 100vw, 800px" 
             alt="Image of Dylan playing drums"
-            class="shadow rounded-md m-auto w-full aspect-auto"
-            format="webp"
-            width={200}
-            height={200}
-          />
+            class="shadow rounded-md m-auto w-full aspect-auto" />
 
           <figcaption class="text-sm mt-2">
             That's me, the one in the middle!
@@ -38,18 +37,27 @@ import BaseLayout from "../../layouts/BaseLayout.astro";
           </em>
 
           <p class="text-base">
-            I'm an Engineering Manager II at Schweitzer Engineering Laboratories
-            (SEL) working primarily in React, C#, Postgres, Docker, Kubernetes,
-            and Redis. Before SEL I was a{" "}
-            <a
-              href="https://www.mobygames.com/developer/sheet/view/developerId,783203/"
-            >
-              web developer at Sony PlayStation
-            </a>
-            , and student web developer at Eastern Washington University.
+            I'm a Senior Software Engineer at Rover.com
+
+            <strong class="block font-bold mt-4">Previous:</strong>
+            <ul>
+              <li>
+                Engineering Manager II @ Schweitzer Engineering Laboratories
+              </li>
+              <li>
+                <a
+                href="https://www.mobygames.com/developer/sheet/view/developerId,783203/"
+              >
+                  Web developer @ Sony PlayStation
+                </a>
+              </li>
+              <li>
+                Student web developer @ Eastern Washington University
+              </li>
+            </ul>
           </p>
 
-          <p class="text-base">
+          <p class="text-base mt-6">
             I play drums in an ok emo/math rock band, <a
               href="https://griffeymusic.bandcamp.com/"
               >Griffey
@@ -66,14 +74,10 @@ import BaseLayout from "../../layouts/BaseLayout.astro";
                 <a
                   target="_blank"
                   href="https://introduction-functional-programming-boise.netlify.com/#/"
-                >
-                  Functional Programming Light (Boise Code Camp 2019)
-                </a>
+                >Functional Programming Light (Boise Code Camp 2019)</a>
               </li>
               <li>Making React Fast (Internal Presentation 2019)</li>
-              <li>
-                NPM, Dependencies, and JS Modules (Internal Presentation 2021)
-              </li>
+              <li>NPM, Dependencies, and JS Modules (Internal Presentation 2021)</li>
             </ul>
 
             <SubHeading class="my-0">Courses</SubHeading>
@@ -81,14 +85,14 @@ import BaseLayout from "../../layouts/BaseLayout.astro";
               <li class="list-none">
                 <a
                   href="https://www.newline.co/courses/creating-react-libraries-from-scratch"
-                  class="block w-2/3 shadow hover:shadow-xl transition transform hover:scale-105 ease-in-out"
+                  class="block w-2/3"
                 >
                   <Image
                     src="/images/Course_Card_5_1.png"
                     alt="Image of Dylan playing drums"
-                    class="rounded-md m-auto"
-                    format="webp"
-                    width={200}
+                    class="rounded-md m-auto shadow hover:shadow-xl transition transform hover:scale-105 ease-in-out"
+                    format="png"
+                    aspectRatio="5:3" 
                     height={200}
                   />
                 </a>
