--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -25,34 +25,36 @@ const { title, description } = Astro.props as Props;
       <slot />
     </main>
 
-    <footer class="flex gap-4 max-w-screen-sm md:max-w-screen-md lg:max-w-screen-lg xl:max-w-screen-xl mx-auto mt-12 border-t-2 border-gray-200 dark:border-gray-600 py-10 px-6">
+    <footer
+      class="flex gap-4 max-w-screen-sm md:max-w-screen-md lg:max-w-screen-lg xl:max-w-screen-xl mx-auto mt-12 border-t-2 border-gray-200 dark:border-gray-600 py-10 px-6"
+    >
       <a rel="me" href="https://hachyderm.io/@ganderzz"><Icon name="ri:mastodon-fill" width={30} /></a>
       <a href="https://github.com/ganderzz"><Icon name="mdi:github" width={30} /></a>
+      <a href="/rss.xml"><Icon name="mdi:rss" width={30} /></a>
     </footer>
 
     <script data-goatcounter="https://dylanpaulus.goatcounter.com/count" async src="//gc.zgo.at/count.js"></script>
+    <script is:inline>
+      /**
+       * Show the correct theme on page load and page switching.
+       * This code prevents the site from flickering light/dark.
+       */
+      const theme = (() => {
+        const mode = typeof localStorage !== "undefined" && localStorage.getItem("theme");
+
+        if (mode) {
+          return mode;
+        }
+
+        if (window.matchMedia("(prefers-color-scheme: dark)").matches) {
+          return "dark";
+        }
+
+        return "light";
+      })();
+
+      document.documentElement.dataset.theme = theme;
+      localStorage.setItem("theme", theme);
+    </script>
   </body>
-  
-  <script is:inline>
-    /**
-     * Show the correct theme on page load and page switching.
-     * This code prevents the site from flickering light/dark.
-     */
-    const theme = (() => {
-      const mode = typeof localStorage !== "undefined" && localStorage.getItem("theme");
-
-      if (mode) {
-        return mode;
-      }
-
-      if (window.matchMedia("(prefers-color-scheme: dark)").matches) {
-        return "dark";
-      }
-
-      return "light";
-    })();
-
-    document.documentElement.dataset.theme = theme;
-    localStorage.setItem("theme", theme);
-  </script>
 </html>
