--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -38,3 +38,9 @@ const { title, description } = Astro.props;
 
 <!-- Fonts -->
 <link rel="preconnect" href="https://rsms.me" />
+
+<style>
+  :root {
+    --shiki-color-background: #444;
+  }
+</style>
