--- a/src/components/TagList.astro
+++ b/src/components/TagList.astro
@@ -8,11 +8,16 @@ const { tags, class: className = "" } = Astro.props as Props;
 ---
 
 <span>
-  {tags.map((tag) => (
-  <a href={`/tags/${tag}`} class={`inline-block hover:bg-gray-400 hover:text-gray-800 dark:bg-gray-900 dark:text-white
+  {
+    tags.map((tag) => (
+      <a
+        href={`/tags/${tag.toLocaleLowerCase()}`}
+        class={`inline-block hover:bg-gray-400 hover:text-gray-800 dark:bg-gray-900 dark:text-white
     bg-gray-300 text-gray-800 border-0 scale-100 transform hover:scale-105 rounded-full px-3 py-1 text-sm font-semibold
-    my-2 mx-1 leading-5 transition ease-out duration-200 ${className}`}>
-    {tag}
-  </a>
-  ))}
+    my-2 mx-1 leading-5 transition ease-out duration-200 ${className}`}
+      >
+        {tag}
+      </a>
+    ))
+  }
 </span>
